缓存功能初步框架达成，修改了部分sql代码