@@ -1,22 +1,23 @@
 package com.sakander.utils;
 
-import com.sakander.annotations.Column;
 import com.sakander.config.DbSource;
+import lombok.extern.slf4j.Slf4j;
+
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.*;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
+@Slf4j
 public class JdbcUtils {
     public static Connection getConn(){
         Connection conn = null;
         try {
             conn = DbSource.getConnection();
         }catch (Exception e){
-            System.out.println("获取连接失败");
-            e.printStackTrace();
+            log.error(e.getMessage());
         }
         return conn;
     }
@@ -40,7 +41,7 @@ public class JdbcUtils {
         }
         return result;
     }
-    public static <T> T excuteSelectOne(String sql,Class<T> clazz,Object ...params){
+    public static <T> T executeSelectOne(String sql, Class<T> clazz, Object ...params){
         Connection conn = null;
         PreparedStatement pstmt = null;
         ResultSet resultSet = null;
@@ -55,14 +56,15 @@ public class JdbcUtils {
             if (resultSet.next()) {
                 result = resultSetToObject(resultSet, clazz);
             }
-        } catch (SQLException | IllegalAccessException | InstantiationException | NoSuchFieldException e) {
+        } catch (SQLException | IllegalAccessException | InstantiationException | NoSuchFieldException |
+                 NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         } finally {
             release(pstmt,conn,resultSet);
         }
         return result;
     }
-    public static <T> List<T> excuteSelectInBatch(String sql, Class<T> clazz, Object ...params){
+    public static <T> List<T> executeSelectInBatch(String sql, Class<T> clazz, Object ...params){
         Connection conn = null;
         PreparedStatement pstmt = null;
         ResultSet resultSet = null;
@@ -77,14 +79,15 @@ public class JdbcUtils {
             while (resultSet.next()) {
                 result.add(resultSetToObject(resultSet, clazz));
             }
-        } catch (SQLException | IllegalAccessException | InstantiationException | NoSuchFieldException e) {
+        } catch (SQLException | IllegalAccessException | InstantiationException | NoSuchFieldException |
+                 NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException(e);
         } finally {
             release(pstmt,conn,resultSet);
         }
         return result;
     }
-    public static List<Map<String,Object>> excuteAggregate(String sql,Object ...params){
+    public static List<Map<String,Object>> executeAggregate(String sql, Object ...params){
         List<Map<String, Object>> result = new ArrayList<>();
         Connection conn = null;
         PreparedStatement pstmt = null;
@@ -118,26 +121,37 @@ public class JdbcUtils {
         }
         return result;
     }
+    public static List<Map<String,Object>> executeSelectWithColumns(String sql,String []columns,Object ...params){
+        List<Map<String,Object>> result = new ArrayList<>();
+        Connection conn = null;
+        PreparedStatement pstmt = null;
+        ResultSet resultSet = null;
+        try {
+            conn = getConn();
+            pstmt = conn.prepareStatement(sql);
+            for (int i = 0; i < params.length; i++) {
+                pstmt.setObject(i + 1, params[i]);
+            }
+            resultSet = pstmt.executeQuery();
+            ResultSetMetaData metaData = resultSet.getMetaData();
+            int columnCount = metaData.getColumnCount();
+            while (resultSet.next()) {
+                result.add(resultSetToMap(resultSet, columnCount, metaData));
+            }
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        } finally {
+            release(pstmt,conn,resultSet);
+        }
+        return result;
+    }
     public static void release(Statement stmt,Connection conn,ResultSet rs){
-        if(stmt != null) {
-            try {
-                stmt.close();
-            } catch (SQLException e) {
-                e.printStackTrace();
-            }
-        }
-        if(conn != null) {
-            try {
-                conn.close();
-            } catch (SQLException e) {
-                e.printStackTrace();
-            }
-        }
+        release(stmt, conn);
         if(rs != null) {
             try {
                 rs.close();
             } catch (SQLException e) {
-                e.printStackTrace();
+                log.warn("resultSet close error,{}",e.getMessage());
             }
         }
     }
@@ -146,19 +160,19 @@ public class JdbcUtils {
             try {
                 stmt.close();
             } catch (SQLException e) {
-                e.printStackTrace();
+                log.warn("stmt close error,{}",e.getMessage());
             }
         }
         if(conn != null) {
             try {
                 conn.close();
             } catch (SQLException e) {
-                e.printStackTrace();
+                log.warn("conn close error,{}",e.getMessage());
             }
         }
     }
-    private static <T> T resultSetToObject(ResultSet rs, Class<T> clazz) throws SQLException, IllegalAccessException, InstantiationException, NoSuchFieldException {
-        T obj = clazz.newInstance();
+    private static <T> T resultSetToObject(ResultSet rs, Class<T> clazz) throws SQLException, IllegalAccessException, InstantiationException, NoSuchFieldException, NoSuchMethodException, InvocationTargetException {
+        T obj = clazz.getDeclaredConstructor().newInstance();
         Field[] fields = clazz.getDeclaredFields();
         for (Field field : fields) {
             field.setAccessible(true);
@@ -168,5 +182,17 @@ public class JdbcUtils {
         }
         return obj;
     }
-
+    private static Map<String,Object> resultSetToMap(ResultSet resultSet,int columnCount,ResultSetMetaData metaData) throws SQLException{
+        Map<String, Object> row = new HashMap<>();
+        for (int i = 1; i <= columnCount; i++) {
+            String columnName = metaData.getColumnName(i);
+            String aliasName = metaData.getColumnLabel(i); // 如果JDBC驱动支持，这将返回别名
+            if (aliasName == null || aliasName.isEmpty()) {
+                aliasName = columnName; // 如果别名不存在或为空，则使用原始列名
+            }
+            Object value = resultSet.getObject(i); // 使用索引来获取值
+            row.put(aliasName, value); // 使用别名作为Map的键
+        }
+        return row;
+    }
 }
